--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ artifactory {
 			repoKey = 'elgregos-release-local'
 			username = "${artifactory_user}"
 			password = "${artifactory_password}"
+			maven = false
 			ivy {
 				ivyLayout = '[organization]/[module]/ivy-[revision].xml'
 				artifactLayout = '[organization]/[module]/[revision]/[module]-[revision](-[classifier]).[ext]'
@@ -76,5 +77,9 @@ dependencies {
 
 artifactoryPublish {
     publishConfigs ('archives')
+}
+
+test {
+    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
 }
 
