--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ buildscript {
 }
 
 artifactory {
-	contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
+	contextUrl = "${artifactory_contextUrl}"
 	publish {
 		repository {
 			repoKey = 'elgregos-release-local'
