--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 artifactory_user=grego
-artifactory_password= {DESede}RYmLX8cicreXf9tEsYFFJA== 
+artifactory_password= APAth3stDbaBGN2ATuoDTeTUd4P
 artifactory_contextUrl=http://elgregos.com/artifactory
