--- a/build.gradle
+++ b/build.gradle
@@ -1,82 +1,30 @@
-apply plugin: 'eclipse'
-apply plugin: 'java'
-apply plugin: 'artifactory'
-apply plugin: 'project-report'
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.1'
-}
-
-group='com.elgregos'
-version='2.0.0'
-
 buildscript {
 	repositories {
-		maven {
-			url 'http://elgregos.com/artifactory/elgregos'
-			credentials {
-				username = "${artifactory_user}"
-				password = "${artifactory_password}"
-			}
-		}
-		ivy {
-			url 'http://elgregos.com/artifactory/elgregos'
-			credentials {
-				username = "${artifactory_user}"
-				password = "${artifactory_password}"
-			}
-		}
+		jcenter()
 	}
-
-	dependencies {
-		classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:2.2.5'	
-	}
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
+	    classpath "io.spring.gradle:dependency-management-plugin:0.5.7.RELEASE"
+    }
 }
 
-artifactory {
-	contextUrl = "${artifactory_contextUrl}"
-	publish {
-		repository {
-			repoKey = 'elgregos-release-local'
-			username = "${artifactory_user}"
-			password = "${artifactory_password}"
-			maven = false
-			ivy {
-				ivyLayout = '[organization]/[module]/ivy-[revision].xml'
-				artifactLayout = '[organization]/[module]/[revision]/[module]-[revision](-[classifier]).[ext]'
-				mavenCompatible = true
-			}
-		}
-	}
-	resolve {
-		repository {
-			repoKey = 'elgregos'
-			username = "${artifactory_user}"
-			password = "${artifactory_password}"
-			ivy {
-				ivyLayout = '[organization]/[module]/ivy-[revision].xml'
-				artifactLayout = '[organization]/[module]/[revision]/[module]-[revision](-[classifier]).[ext]'
-				mavenCompatible = true
-			}
-		}
-	}
+plugins {
+	id "java"
+	id "io.spring.dependency-management" version "0.5.7.RELEASE"
+	id "com.jfrog.bintray" version "1.6"
 }
 
 sourceCompatibility = '8'
 
-configurations.all {
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+repositories {
+	mavenLocal()
+	jcenter() 
 }
 
 dependencies {
 	compile 'javax:javaee-api:7.0'
 	compile 'org.slf4j:slf4j-api:1.7.7'	
-	testCompile group:'com.elgregos', name:'test-framework', version:'1.0.0', changing: true
-	testRuntime 'org.wildfly:wildfly-arquillian-container-embedded:8.1.0.Final'
-}
-
-artifactoryPublish {
-    publishConfigs ('archives')
+	testCompile 'com.elgregos:test-framework:2.0.0-SNAPSHOT'
 }
 
 test {
