--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,2 @@
-artifactory_user=grego
-artifactory_password= APAth3stDbaBGN2ATuoDTeTUd4P
-artifactory_contextUrl=http://elgregos.com/artifactory
+group=com.elgregos
+version=2.0.0-SNAPSHOT
